Remove lovable branding and update meta tags

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bab Al Balad | Ramadan at Soleil Cafe - Iftar & Suhour</title>
-    <meta name="description" content="Experience an immersive Ramadan journey at Soleil Cafe. Enjoy refined Iftar at Bab Al Balad and elegant Suhour at Soleil Rooftop overlooking the Red Sea." />
-    <meta name="author" content="Soleil Cafe" />
 
-    <meta property="og:title" content="Bab Al Balad | Ramadan at Soleil Cafe" />
-    <meta property="og:description" content="Experience an immersive Ramadan journey. Iftar at Soleil Lounge • Suhour at Soleil Rooftop" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bab Al Balad | Ramadan at Soleil Cafe - Iftar & Suhour</title>
+  <meta name="description"
+    content="Experience an immersive Ramadan journey at Soleil Cafe. Enjoy refined Iftar at Bab Al Balad and elegant Suhour at Soleil Rooftop overlooking the Red Sea." />
+  <meta name="author" content="Soleil Cafe" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@SoleilCafe" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Bab Al Balad | Ramadan at Soleil Cafe" />
+  <meta property="og:description"
+    content="Experience an immersive Ramadan journey. Iftar at Soleil Lounge • Suhour at Soleil Rooftop" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/logo.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@SoleilCafe" />
+  <meta name="twitter:image" content="/logo.png" />
+  <link rel="icon" href="/logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
